# ai-eng-assignment

./: .gitignore  README.md  pyproject.toml
data/enhanced/: enhanced_10813_best-chocolate-chip-cookies.json  enhanced_144299_nikujaga-(japanese-style-meat-.json  enhanced_19117_spicy-apple-cake.json  enhanced_77935_creamy-sweet-potato-with-ginge.json  pipeline_summary_report.json
scripts/: convert_kaggle_to_recipes.py
src/: test_pipeline.py
src/data/enhanced/: enhanced_10813_best-chocolate-chip-cookies.json
src/llm_pipeline/: enhanced_recipe_generator.py  pipeline.py
